Fix home page image text alignmnet

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -123,7 +123,7 @@ header {
 
 .product-index-home-image-text {
     position: absolute;
-    top: 150px;
+    bottom: 20px;
     left: 15px;
     color: white;
     font-size: 120%;
